tests/errors/lex10.kt
fun main() {
    val s = """multi
line
string
}